<?xml version="1.0"?>
<package format="2">
  <name>Homography</name>
  <version>0.0.0</version>
  <description>Package for document perspective correction using homography transformation</description>

  <maintainer email="alessandra@todo.todo">Alessandra</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/Homography</url>
  <author email="alessandra@todo.todo">Alessandra</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>python-opencv</depend>
  <depend>numpy</depend>

</package>